2003-02-13  Geoffrey T. Dairiki  <dairiki@dairiki.org>
	
	Abstract some of the higher-level player functionality
	into pyxine.player.Player.

	* pyxine/player.py: New file.
	* pyxine/__init__.py: Update __all__
	* pyxine/Makefile(PYSOURCE): Add pyxine/player.py
	* examples/player.py(Player): Use pyxine.player.Player.
	* examples/tkplayer.py(Player): Use pyxine.player.Player.

2003-02-12  Geoffrey T. Dairiki  <dairiki@dairiki.org>

	* README (README): Convert to reStructuredMarkup formatting.
	Added some text.  (README is now on the pyxine web site.)

2003-02-12  Geoffrey T. Dairiki  <dairiki@dairiki.org>

	==================
	Release 0.1alpha2.
	==================
	
	* Makefile: Increment PYXINE_VERSION

	* README: Instructions for playing an audio file were wrong.
	Added some notes about the example players.

	* pxlib/Geometry.cc (to_string): Add namespace to
	std::ostringstream

	* pxlib/XDisplay.cc (select_input): Remove spurious (and wrong)
	'inline' declaration.
	
2003-02-11  Geoffrey T. Dairiki  <dairiki@dairiki.org>

	* pxlib/Callback.cc (rep_t, ~rep_t):  Remove debugging calls to
	cerr.form().  Apparently ostream::form() is a GNU extension.
	Don't use it!

2003-02-07  Geoffrey T. Dairiki  <dairiki@dairiki.org>

	* README: Add xine-lib to requirements

2003-02-07  Geoffrey T. Dairiki  <dairiki@dairiki.org>

	First release: pyxine-0.1alpha1.